Os bolos e doces tem nav e foot

--- a/doces.html
+++ b/doces.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="eli.css" />
-    <title>Cardapio</title>
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="eli.css">
+    <title>Doces</title>
+</head>
+<body>
     <header class="inicio">
         <div class="contato">
             <a href="https://www.instagram.com/eli.doces_/" target="_blank"> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000" fill="none">
@@ -47,18 +47,11 @@
             </nav>
         </header>
         <main>
-            
-            <h1>Cardapio</h1>
-            <div class="cardapio">
-            <div class="imagem"> 
-            <a href="doces.html"><img src="fotos/cardapiodoce.jpg" alt="Doces"></a>
-            <p>Doces</p>
-            </div>
-            <div class="imagem"> 
-            <a href="bolos.html"><img src="fotos/cardapiobolos.jpg" alt="Bolos"></a>
-                <p>Bolos</p>
-            </div>
-
+            <h1>Doces</h1>
+            <p>As guloseimas mais gostosas do oeste</p>
+            <div class="imagem">
+            <img src="fotos/copinho.jpg" alt="">
+        </div>
         </main>
         <footer>
             <p class="rodape">Horários de atendimento e endereço:</p>
@@ -69,6 +62,6 @@
             </ul>
 
             <p class="rodape">Copyright &copy; 2024 - Eli Doces, todos os direitos reservados</p>
-        </footer>
-  </body>
+        </footer> 
+</body>
 </html>
