Já da pra colocar os doces e bolos
Só copiar o estilo dai trocar a imagem e a descrição

--- a/bolos.html
+++ b/bolos.html
@@ -48,9 +48,14 @@
         </header>
         <main>
             <h1>Bolos</h1>
-            <p>Os bolos mais cremosos do oriente</p>
-            <div class="imagem">
-                <img src="fotos/face.png" alt="">
+            <p>Os bolos mais cremosos do oeste</p>
+            <div class="imagem_car">
+            <img src="fotos/boloandar.jpg" alt="">
+                <ul>
+                    <li>Nome: Bolo de Andar</li>
+                    <li>Quantidade: 1</li>
+                
+                </ul>
             </div>
         </main>
         <footer>
