--- a/doces.html
+++ b/doces.html
@@ -49,9 +49,16 @@
         <main>
             <h1>Doces</h1>
             <p>As guloseimas mais gostosas do oeste</p>
-            <div class="imagem">
+            <div class="imagem_car">
             <img src="fotos/copinho.jpg" alt="">
-        </div>
+                <ul>
+                    <li>Nome: Copinho</li>
+                    <li>Quantidade: 30</li>
+                
+                </ul>
+            </div>
+
+            
         </main>
         <footer>
             <p class="rodape">Horários de atendimento e endereço:</p>
