Add formulário de contato

--- a/Index.html
+++ b/Index.html
@@ -2,10 +2,10 @@
 <html lang="pt">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="eli.css" />
-    <link rel="icon" href="fotos/logo.png" type="image/x-icon" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="eli.css">
+    <link rel="icon" href="fotos/logo.png" type="image/x-icon">
     <title>Eli Doces</title>
 </head>
 
@@ -29,6 +29,7 @@
             </svg></a>
         </div>
         </div>
+    </header>
         <nav class="nav_bar">
                 <div class="logo">
                     <a href="index.html"><img src="fotos/logo.png" alt="Logo" class="logoimg"></a>
@@ -40,17 +41,20 @@
                         <a class="menu_top__link" href="index.html">Home</a>
                     </li>
                     <li class="menu_top__paragrafo">
-                        <a class="menu_top__link" href="alunos.html">Alunos</a>
+                        <a class="menu_top__link" href="alunos.html">Participantes</a>
                     </li>
                     <li class="menu_top__paragrafo">
-                        <a class="menu_top__link" href="#">Kit degustação</a>
+                        <a class="menu_top__link" href="contato.html">Entrar em contato</a>
                     </li>
                     <li class="menu_top__paragrafo">
-                        <a class="menu_top__link" href="cardapio.html">Cardápios</a>
+                        <a class="menu_top__link" href="#">Cardápios</a>
+                    <li class="menu_top__paragrafo">
+                            <a class="menu_top__link" href="index.html">Fazer pedido</a>
+                    </li>
+
                     </li>
                 </ul>
             </nav>
-        </header>
             <main class="conteudo">
 
                         
@@ -114,5 +118,9 @@
 
                             <p class="rodape">Copyright &copy; 2024 - Eli Doces, todos os direitos reservados</p>
                         </footer>
+
+    
+
 </body>
+
 </html>
