--- a/alunos.html
+++ b/alunos.html
@@ -25,6 +25,7 @@
             </svg></a>
         </div>
         </div>
+    </header>
         <nav class="nav_bar">
                 <div class="logo">
                     <a href="index.html"><img src="fotos/logo.png" alt="Logo" class="logoimg"></a>
@@ -36,13 +37,17 @@
                         <a class="menu_top__link" href="index.html">Home</a>
                     </li>
                     <li class="menu_top__paragrafo">
-                        <a class="menu_top__link" href="alunos.html">Alunos</a>
+                        <a class="menu_top__link" href="alunos.html">Participantes</a>
                     </li>
                     <li class="menu_top__paragrafo">
-                        <a class="menu_top__link" href="#">Kit degustação</a>
+                        <a class="menu_top__link" href="contato.html">Entrar em contato</a>
                     </li>
                     <li class="menu_top__paragrafo">
                         <a class="menu_top__link" href="cardapio.html">Cardápios</a>
+                    <li class="menu_top__paragrafo">
+                            <a class="menu_top__link" href="index.html">Fazer pedido</a>
+                    </li>
+
                     </li>
                 </ul>
             </nav>
