--- a/cardapio.html
+++ b/cardapio.html
@@ -24,6 +24,7 @@
             </svg></a>
         </div>
         </div>
+    </header>
         <nav class="nav_bar">
                 <div class="logo">
                     <a href="index.html"><img src="fotos/logo.png" alt="Logo" class="logoimg"></a>
@@ -35,17 +36,20 @@
                         <a class="menu_top__link" href="index.html">Home</a>
                     </li>
                     <li class="menu_top__paragrafo">
-                        <a class="menu_top__link" href="alunos.html">Alunos</a>
+                        <a class="menu_top__link" href="alunos.html">Participantes</a>
                     </li>
                     <li class="menu_top__paragrafo">
-                        <a class="menu_top__link" href="#">Kit degustação</a>
+                        <a class="menu_top__link" href="contato.html">Entrar em contato</a>
                     </li>
                     <li class="menu_top__paragrafo">
                         <a class="menu_top__link" href="cardapio.html">Cardápios</a>
+                    <li class="menu_top__paragrafo">
+                            <a class="menu_top__link" href="index.html">Fazer pedido</a>
+                    </li>
+
                     </li>
                 </ul>
             </nav>
-        </header>
         <main>
             
             <h1>Cardapio</h1>
