--- a/contato.html
+++ b/contato.html
@@ -45,7 +45,7 @@
                     <li class="menu_top__paragrafo">
                         <a class="menu_top__link" href="cardapio.html">Cardápios</a>
                     <li class="menu_top__paragrafo">
-                            <a class="menu_top__link" href="index.html">Fazer pedido</a>
+                            <a class="menu_top__link" href="pedido.html">Fazer pedido</a>
                     </li>
 
                     </li>
