Formulário contato ADD

--- a/alunos.html
+++ b/alunos.html
@@ -54,8 +54,8 @@
             <section class="alunos">
                 <h1>Ana Julia Caetano Bento</h1>
                 <h1>Matheus Becchi Arruda</h1>
-                <h1>João Vitor Moraes Bringmann</>
-                <h1>Juliana Aparecida Vecchi</>
+                <h1>João Vitor Moraes Bringmann</h1>
+                <h1>Juliana Aparecida Vecchi</h1>
 
             </section>
 
