--- a/doces.html
+++ b/doces.html
@@ -53,7 +53,7 @@
             <img src="fotos/copinho.jpg" alt="">
                 <ul>
                     <li>Nome: Copinho</li>
-                    <li>Quantidade: 30</li>
+                    <li>Quantidade: 30yrgeygre</li>
                 
                 </ul>
             </div>
