Organizei os nav e o css do cardapio

--- a/bolos.html
+++ b/bolos.html
@@ -25,26 +25,30 @@
         </div>
         </div>
         <nav class="nav_bar">
-                <div class="logo">
-                    <a href="index.html"><img src="fotos/logo.png" alt="Logo" class="logoimg"></a>
-                </div>
+            <div class="logo">
+                <a href="index.html"><img src="fotos/logo.png" alt="Logo" class="logoimg"></a>
+            </div>
 
-                <ul>
-                    </li>
-                    <li class="menu_top__paragrafo">
-                        <a class="menu_top__link" href="index.html">Home</a>
-                    </li>
-                    <li class="menu_top__paragrafo">
-                        <a class="menu_top__link" href="alunos.html">Alunos</a>
-                    </li>
-                    <li class="menu_top__paragrafo">
-                        <a class="menu_top__link" href="#">Kit degustação</a>
-                    </li>
-                    <li class="menu_top__paragrafo">
-                        <a class="menu_top__link" href="cardapio.html">Cardápios</a>
-                    </li>
-                </ul>
-            </nav>
+            <ul>
+                </li>
+                <li class="menu_top__paragrafo">
+                    <a class="menu_top__link" href="index.html">Home</a>
+                </li>
+                <li class="menu_top__paragrafo">
+                    <a class="menu_top__link" href="alunos.html">Participantes</a>
+                </li>
+                <li class="menu_top__paragrafo">
+                    <a class="menu_top__link" href="contato.html">Entrar em contato</a>
+                </li>
+                <li class="menu_top__paragrafo">
+                    <a class="menu_top__link" href="cardapio.html">Cardápios</a>
+                <li class="menu_top__paragrafo">
+                        <a class="menu_top__link" href="pedido.html">Fazer pedido</a>
+                </li>
+
+                </li>
+            </ul>
+        </nav>
         </header>
         <main>
             <h1>Bolos</h1>
