--- a/cardapio.html
+++ b/cardapio.html
@@ -56,11 +56,11 @@
             <div class="cardapio">
                 <div class="imagem"> 
                     <h2>DOCES</h2>
-                    <a href="#"><img src="fotos/cardapiodoce.jpg" alt="Doces"></a>
+                    <a href="doces.html"><img src="fotos/cardapiodoce.jpg" alt="Doces"></a>
                 </div>
                 <div class="imagem"> 
                     <h2>BOLOS</h2>
-                    <a href="#"><img src="fotos/cardapiobolos.jpg" alt="Bolos"></a>
+                    <a href="bolos.html"><img src="fotos/cardapiobolos.jpg" alt="Bolos"></a>
                 </div>
             </div>
         
