--- a/pedido.html
+++ b/pedido.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="eli.css" />
+    <link rel="icon" href="fotos/logo.png" type="image/x-icon" />
+    <title>Pedido - Eli Doces</title>
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="eli.css">
-    <link rel="icon" href="fotos/logo.png" type="image/x-icon">
-    <title>Eli Doces</title>
-</head>
-
-
-<body >
-    
+  <body>
     <header class="inicio">
         <div class="contato">
             <a href="https://www.instagram.com/eli.doces_/" target="_blank"> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000" fill="none">
@@ -29,39 +26,135 @@
             </svg></a>
         </div>
         </div>
-    </header>
         <nav class="nav_bar">
-                <div class="logo">
-                    <a href="index.html"><img src="fotos/logo.png" alt="Logo" class="logoimg"></a>
-                </div>
+            <div class="logo">
+                <a href="index.html"><img src="fotos/logo.png" alt="Logo" class="logoimg"></a>
+            </div>
 
-                <ul>
-                    </li>
-                    <li class="menu_top__paragrafo">
-                        <a class="menu_top__link" href="index.html">Home</a>
-                    </li>
-                    <li class="menu_top__paragrafo">
-                        <a class="menu_top__link" href="alunos.html">Participantes</a>
-                    </li>
-                    <li class="menu_top__paragrafo">
-                        <a class="menu_top__link" href="contato.html">Entrar em contato</a>
-                    </li>
-                    <li class="menu_top__paragrafo">
-                        <a class="menu_top__link" href="cardapio.html">Cardápios</a>
-                    <li class="menu_top__paragrafo">
-                            <a class="menu_top__link" href="pedido.html">Fazer pedido</a>
-                    </li>
+            <ul>
+                </li>
+                <li class="menu_top__paragrafo">
+                    <a class="menu_top__link" href="index.html">Home</a>
+                </li>
+                <li class="menu_top__paragrafo">
+                    <a class="menu_top__link" href="alunos.html">Participantes</a>
+                </li>
+                <li class="menu_top__paragrafo">
+                    <a class="menu_top__link" href="contato.html">Entrar em contato</a>
+                </li>
+                <li class="menu_top__paragrafo">
+                    <a class="menu_top__link" href="cardapio.html">Cardápios</a>
+                <li class="menu_top__paragrafo">
+                        <a class="menu_top__link" href="pedido.html">Fazer pedido</a>
+                </li>
 
-                    </li>
-                </ul>
-            </nav>
-            <footer>
-                <p class="rodape">Horários de atendimento e endereço:</p>
-                <ul>
-                    <li>Trabalhamos apenas sob encomenda - consultar disponibilidade de horários.</li>
-                    <li>Costeira - São José dos Pinhais</li>
-                    <li>Chef - Eliana Caetano / Desde 2016</li>
-                </ul>
+                </li>
+            </ul>
+        </nav>
+        </header>
 
-                <p class="rodape">Copyright &copy; 2024 - Eli Doces, todos os direitos reservados</p>
-            </footer>
+    
+
+    <main>
+      <h1>Faça seu Pedido</h1>
+      <form action="enviar_pedido.php" method="POST">
+        <fieldset>
+          <legend>Informações do Cliente</legend>
+          <label for="nome">Nome:</label>
+          <input type="text" id="nome" name="nome" required /><br />
+
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required /><br />
+
+          <label for="telefone">Telefone:</label>
+          <input type="tel" id="telefone" name="telefone" required /><br />
+
+          <label for="endereco">Endereço:</label>
+          <textarea
+            id="endereco"
+            name="endereco"
+            rows="4"
+            cols="50"
+            required
+          ></textarea>
+        </fieldset>
+
+        <fieldset>
+          <legend>Detalhes do Pedido</legend>
+          <label for="produto">Produto:</label>
+          <select id="produto" name="produto">
+            <option value="brigadeiro">Brigadeiro</option>
+            <option value="beijinho">Beijinho</option>
+            <option value="bolo">Bolo</option></select
+          ><br />
+
+          <label for="quantidade">Quantidade:</label>
+          <input
+            type="number"
+            id="quantidade"
+            name="quantidade"
+            min="1"
+            max="100"
+            required
+          /><br />
+
+          <label for="sabores">Sabores:</label>
+          <input
+            type="checkbox"
+            id="chocolate"
+            name="sabor"
+            value="chocolate"
+          />
+          <label for="chocolate">Chocolate</label>
+          <input type="checkbox" id="morango" name="sabor" value="morango" />
+          <label for="morango">Morango</label>
+          <input type="checkbox" id="coco" name="sabor" value="coco" />
+          <label for="coco">Coco</label><br />
+
+          <label for="embalagem">Tipo de Embalagem:</label>
+          <input
+            type="radio"
+            id="simples"
+            name="embalagem"
+            value="simples"
+            checked
+          />
+          <label for="simples">Simples</label>
+          <input type="radio" id="premium" name="embalagem" value="premium" />
+          <label for="premium">Premium</label><br />
+
+          <label for="mensagem">Mensagem Personalizada:</label>
+          <textarea id="mensagem" name="mensagem" rows="4" cols="50"></textarea
+          ><br />
+        </fieldset>
+
+        <fieldset>
+          <legend>Data de Entrega</legend>
+          <label for="data">Data:</label>
+          <input type="date" id="data" name="data" required /><br />
+
+          <label for="horario">Horário:</label>
+          <input type="time" id="horario" name="horario" required /><br />
+        </fieldset>
+
+        <button type="submit">Enviar Pedido</button>
+        <button type="reset">Resetar Formulário</button>
+      </form>
+    </main>
+
+    <footer>
+      <p class="rodape">Horários de atendimento e endereço:</p>
+      <ul>
+        <li>
+          Trabalhamos apenas sob encomenda - consultar disponibilidade de
+          horários.
+        </li>
+        <li>Costeira - São José dos Pinhais</li>
+        <li>Chef - Eliana Caetano / Desde 2016</li>
+      </ul>
+      <p class="rodape">
+        Copyright &copy; 2024 - Eli Doces, todos os direitos reservados
+      </p>
+    </footer>
+  </body>
+</html>
