--- a/pedido.html
+++ b/pedido.html
@@ -61,21 +61,22 @@
         <fieldset>
           <legend>Informações do Cliente</legend>
           <label for="nome">Nome:</label>
-          <input type="text" id="nome" name="nome" required /><br />
+          <input type="text" id="nome" name="nome" required placeholder="Digite seu nome"/><br />
 
           <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required /><br />
+          <input type="email" id="email" name="email" required placeholder="Digiti seu email"/><br />
 
           <label for="telefone">Telefone:</label>
-          <input type="tel" id="telefone" name="telefone" required /><br />
+          <input type="tel" id="telefone" name="telefone" required placeholder="Digite seu telefone"/><br />
 
-          <label for="endereco">Endereço:</label>
+          <label for="endereco">Endereço: </label>
           <textarea
             id="endereco"
             name="endereco"
             rows="4"
             cols="50"
             required
+            placeholder="Digite seu Endereço"
           ></textarea>
         </fieldset>
 
@@ -96,6 +97,7 @@
             min="1"
             max="100"
             required
+            placeholder="Digite a quantidade"
           /><br />
 
           <label for="sabores">Sabores:</label>
@@ -124,7 +126,7 @@
           <label for="premium">Premium</label><br />
 
           <label for="mensagem">Mensagem Personalizada:</label>
-          <textarea id="mensagem" name="mensagem" rows="4" cols="50"></textarea
+          <textarea id="mensagem" name="mensagem" rows="4" cols="50" placeholder="Digite sua Mensagem"></textarea
           ><br />
         </fieldset>
 
