--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,9 @@
 
 
 <body >
+    <script>
+        console.log('Olá mundo')
+    </script>
     
     <header class="inicio">
         <div class="contato">
